--- a/settings.json
+++ b/settings.json
@@ -20,8 +20,12 @@
         { "command": { "action": "moveFocus", "direction": "up" }, "keys": ["ctrl+alt+shift+up"] },
         { "command": { "action": "moveFocus", "direction": "right" }, "keys": ["ctrl+alt+shift+right"] },
         { "command": { "action": "moveFocus", "direction": "down" }, "keys": ["ctrl+alt+shift+down"] },
-        { "command": { "action": "splitPane", "split": "horizontal" }, "keys": ["ctrl+h"] },
-        { "command": { "action": "splitPane", "split": "vertical" }, "keys": ["ctrl+shift+h"] },
+        { "command": { "action": "resizePane", "direction": "down" }, "keys": "alt+shift+down" },
+        { "command": { "action": "resizePane", "direction": "up" }, "keys": "alt+shift+up" },
+        { "command": { "action": "resizePane", "direction": "left" }, "keys": "alt+shift+left" },
+        { "command": { "action": "resizePane", "direction": "right" }, "keys": "alt+shift+right" },
+        { "command": { "action": "splitPane", "split": "horizontal",  "splitMode": "duplicate" }, "keys": ["ctrl+h"] },
+        { "command": { "action": "splitPane", "split": "vertical",  "splitMode": "duplicate" }, "keys": ["ctrl+shift+h"] },
         {"command": "closePane", "keys": [ "ctrl+shift+w"]},
         {"command": "find", "keys": [ "ctrl+f"]},
         {"command": "copy", "keys": [ "ctrl+shift+c"]},
@@ -47,17 +51,39 @@
             "guid": "{ad36f2f5-c57e-45e3-8b17-24fac8b9245f}",
             "acrylicOpacity": 1,
             "closeOnExit": true,
-            "colorScheme": "Solarized Light",
-            // "colorScheme": "Campbell",
-            "commandline": "\"%PROGRAMFILES%\\git\\usr\\bin\\bash.exe\" -i -l",
-            "cursorColor": "#000000",
-            // "cursorColor": "#FFFFFF",
+            // "colorScheme": "Solarized Light",
+            "colorScheme": "Gruvbox-Material Hard Dark",
+            "commandline": "\"%PROGRAMFILES%/git/usr/bin/bash.exe\" -i -l",
+            // "cursorColor": "#000000",
+            "cursorColor": "#FFFFFF",
             "cursorShape": "bar",
             "fontFace": "Consolas",
-            "fontSize": 10,
+            "fontSize": 12,
             "historySize": 9001,
-            "icon": "ms-appx:///ProfileIcons/{0caa0dad-35be-5f56-a8ff-afceeeaa6101}.png",
+            // "icon" : "C:/Program Files/Git/mingw64/share/git/git-for-windows.ico",
+            "icon" : "%PROGRAMFILES%/Git/mingw64/share/git/git-for-windows.ico",
             "name": "Bash",
+            "padding": "0, 0, 0, 0",
+            "snapOnInput": true,
+            "startingDirectory": "%__CD__%",
+            "useAcrylic": true
+        },
+        {
+            "guid": "{af311da5-44c7-4395-9a69-7fc62e3464ec}",
+            "acrylicOpacity": 1,
+            "closeOnExit": true,
+            // "colorScheme": "Solarized Light",
+            "colorScheme": "Gruvbox-Material Hard Dark",
+            // "colorScheme": "Campbell",
+            "commandline": "\"C:/tools/msys64/usr/bin/bash.exe\" -i -l",
+            // "cursorColor": "#000000",
+            "cursorColor": "#FFFFFF",
+            "cursorShape": "bar",
+            "fontFace": "Consolas",
+            "fontSize": 12,
+            "historySize": 9001,
+            "icon" : "C:/tools/msys64/msys2.ico",
+            "name": "MSYS2",
             "padding": "0, 0, 0, 0",
             "snapOnInput": true,
             "startingDirectory": "%__CD__%",
@@ -136,6 +162,13 @@
             "hidden": false,
             "name": "Azure Cloud Shell",
             "source": "Windows.Terminal.Azure"
+        },
+        {
+            "guid": "{46ca431a-3a87-5fb3-83cd-11ececc031d2}",
+            "hidden": false,
+            "name": "kali-linux",
+            "source": "Windows.Terminal.Wsl",
+            "colorScheme": "Cobalt2"
         }
     ],
     "schemes": [
@@ -285,6 +318,111 @@
             "red": "#FF5555",
             "white": "#F8F8F2",
             "yellow": "#F1FA8C"
+        },
+        {
+			"name" : "Gruvbox-Material Medium Dark",
+            "background" : "#282828",
+            "black" : "#665C54",
+            "blue" : "#7DAEA3",
+            "brightBlack" : "#928374",
+            "brightBlue" : "#7DAEA3",
+            "brightCyan" : "#89B482",
+            "brightGreen" : "#A9B665",
+            "brightPurple" : "#D3869B",
+            "brightRed" : "#EA6962",
+            "brightWhite" : "#D4BE98",
+            "brightYellow" : "#D8A657",
+            "cyan" : "#89B482",
+            "foreground" : "#D4BE98",
+            "green" : "#A9B665",
+            "purple" : "#D3869B",
+            "red" : "#EA6962",
+            "white" : "#D4BE98",
+            "yellow" : "#D8A657"
+        },
+        {
+			"name" : "Gruvbox-Material Hard Dark",
+            "background" : "#1d2021",
+            "black" : "#665C54",
+            "blue" : "#7DAEA3",
+            "brightBlack" : "#928374",
+            "brightBlue" : "#7DAEA3",
+            "brightCyan" : "#89B482",
+            "brightGreen" : "#A9B665",
+            "brightPurple" : "#D3869B",
+            "brightRed" : "#EA6962",
+            "brightWhite" : "#D4BE98",
+            "brightYellow" : "#D8A657",
+            "cyan" : "#89B482",
+            "foreground" : "#D4BE98",
+            "green" : "#A9B665",
+            "purple" : "#D3869B",
+            "red" : "#EA6962",
+            "white" : "#D4BE98",
+            "yellow" : "#D8A657"
+        },
+        {
+			"name" : "Gruvbox-Material Hard Light",
+            "background" : "#F9F5D7",
+            "black" : "#504945",
+            "blue" : "#45707A",
+            "brightBlack" : "#504945",
+            "brightBlue" : "#45707A",
+            "brightCyan" : "#4C7A5D",
+            "brightGreen" : "#6C782E",
+            "brightPurple" : "#945E80",
+            "brightRed" : "#C14A4A",
+            "brightWhite" : "#D4BE98",
+            "brightYellow" : "#B47109",
+            "cyan" : "#4C7A5D",
+            "foreground" : "#654735",
+            "green" : "#6C782E",
+            "purple" : "#945E80",
+            "red" : "#C14A4A",
+            "white" : "#D4BE98",
+            "yellow" : "#B47109"
+        },
+        {
+            "name" : "Gruvbox-Material Medium Light",
+            "green" : "#6C782E",
+            "background" : "#fbf1c7",
+            "black" : "#504945",
+            "blue" : "#45707A",
+            "brightBlack" : "#504945",
+            "brightBlue" : "#45707A",
+            "brightCyan" : "#4C7A5D",
+            "brightGreen" : "#6C782E",
+            "brightPurple" : "#945E80",
+            "brightRed" : "#C14A4A",
+            "brightWhite" : "#D4BE98",
+            "brightYellow" : "#B47109",
+            "cyan" : "#4C7A5D",
+            "foreground" : "#654735",
+            "purple" : "#945E80",
+            "red" : "#C14A4A",
+            "white" : "#D4BE98",
+            "yellow" : "#B47109"
+        },
+        {
+            "background": "#193549",
+            "black": "#000000",
+            "blue": "#1478DB",
+            "brightBlack": "#808080",
+            "brightBlue": "#1478DB",
+            "brightCyan": "#00ffff",
+            "brightGreen": "#33ff00",
+            "brightPurple": "#cc00ff",
+            "brightRed": "#ff0000",
+            "brightWhite": "#ffffff",
+            "brightYellow": "#ffff00",
+            "cyan": "#00c5c7",
+            "foreground": "#c7c7c7",
+            "green": "#3AD900",
+            "name": "Cobalt2",
+            "purple": "#ff2c70",
+            "red": "#ff2600",
+            "white": "#c7c7c7",
+            "yellow": "#ffc600"
         }
     ]
 }
