--- a/settings.json
+++ b/settings.json
@@ -52,15 +52,14 @@
             "acrylicOpacity": 1,
             "closeOnExit": true,
             // "colorScheme": "Solarized Light",
-            "colorScheme": "Gruvbox-Material Hard Dark",
+            "colorScheme": "ayu",
             "commandline": "\"%PROGRAMFILES%/git/usr/bin/bash.exe\" -i -l",
-            // "cursorColor": "#000000",
             "cursorColor": "#FFFFFF",
             "cursorShape": "bar",
-            "fontFace": "Consolas",
+            "fontFace": "Cascadia Code",
+            "fontWeight": "bold",
             "fontSize": 12,
             "historySize": 9001,
-            // "icon" : "C:/Program Files/Git/mingw64/share/git/git-for-windows.ico",
             "icon" : "%PROGRAMFILES%/Git/mingw64/share/git/git-for-windows.ico",
             "name": "Bash",
             "padding": "0, 0, 0, 0",
@@ -72,12 +71,8 @@
             "guid": "{af311da5-44c7-4395-9a69-7fc62e3464ec}",
             "acrylicOpacity": 1,
             "closeOnExit": true,
-            // "colorScheme": "Solarized Light",
-            "colorScheme": "Gruvbox-Material Hard Dark",
-            // "colorScheme": "Campbell",
+            "colorScheme": "ayu",
             "commandline": "\"C:/tools/msys64/usr/bin/bash.exe\" -i -l",
-            // "cursorColor": "#000000",
-            "cursorColor": "#FFFFFF",
             "cursorShape": "bar",
             "fontFace": "Consolas",
             "fontSize": 12,
@@ -129,7 +124,7 @@
         {
             "acrylicOpacity": 0.75,
             "closeOnExit": true,
-            "colorScheme": "Dracula",
+            "colorScheme": "deep",
             // "colorScheme" : "Solarized Dark",
             "commandline": "cmd.exe",
             "cursorColor": "#FFFFFF",
@@ -142,7 +137,25 @@
             "name": "cmd",
             "padding": "0, 0, 0, 0",
             "snapOnInput": true,
-            "startingDirectory": "%USERPROFILE%/Documents/GitHub",
+            "startingDirectory": "%__CD__%",
+            "useAcrylic": true
+        },
+        {
+            "acrylicOpacity": 0.75,
+            "closeOnExit": true,
+            "colorScheme": "deep",
+            "commandline": "cmd.exe /k \"C:/Program Files (x86)/Microsoft Visual Studio/2019/Community/Common7/Tools/VsDevCmd.bat\"",
+            "icon": "ms-appx:///ProfileIcons/{0caa0dad-35be-5f56-a8ff-afceeeaa6101}.png",
+            "name": "Developer CMD for VS 2019",
+            "cursorColor": "#FFFFFF",
+            "cursorShape": "bar",
+            "fontFace": "Consolas",
+            "fontSize": 14,
+            "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+            "historySize": 9001,
+            "padding": "0, 0, 0, 0",
+            "snapOnInput": true,
+            "startingDirectory": "%__CD__%",
             "useAcrylic": true
         },
         {
@@ -158,21 +171,22 @@
             "source": "Windows.Terminal.Wsl"
         },
         {
-            "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-            "hidden": false,
-            "name": "Azure Cloud Shell",
-            "source": "Windows.Terminal.Azure"
-        },
-        {
             "guid": "{46ca431a-3a87-5fb3-83cd-11ececc031d2}",
             "hidden": false,
             "name": "kali-linux",
             "source": "Windows.Terminal.Wsl",
             "colorScheme": "Cobalt2"
+        },
+        {
+            "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
+            "hidden": false,
+            "name": "Azure Cloud Shell",
+            "source": "Windows.Terminal.Azure"
         }
     ],
     "schemes": [
         {
+            "name": "Campbell",
             "background": "#0C0C0C",
             "black": "#0C0C0C",
             "blue": "#0037DA",
@@ -187,97 +201,13 @@
             "cyan": "#3A96DD",
             "foreground": "#CCCCCC",
             "green": "#13A10E",
-            "name": "Campbell",
             "purple": "#881798",
             "red": "#C50F1F",
             "white": "#CCCCCC",
             "yellow": "#C19C00"
         },
         {
-            "background": "#000000",
-            "black": "#000000",
-            "blue": "#000080",
-            "brightBlack": "#808080",
-            "brightBlue": "#0000FF",
-            "brightCyan": "#00FFFF",
-            "brightGreen": "#00FF00",
-            "brightPurple": "#FF00FF",
-            "brightRed": "#FF0000",
-            "brightWhite": "#FFFFFF",
-            "brightYellow": "#FFFF00",
-            "cyan": "#008080",
-            "foreground": "#C0C0C0",
-            "green": "#008000",
-            "name": "Vintage",
-            "purple": "#800080",
-            "red": "#800000",
-            "white": "#C0C0C0",
-            "yellow": "#808000"
-        },
-        {
-            "background": "#282C34",
-            "black": "#282C34",
-            "blue": "#61AFEF",
-            "brightBlack": "#5A6374",
-            "brightBlue": "#61AFEF",
-            "brightCyan": "#56B6C2",
-            "brightGreen": "#98C379",
-            "brightPurple": "#C678DD",
-            "brightRed": "#E06C75",
-            "brightWhite": "#DCDFE4",
-            "brightYellow": "#E5C07B",
-            "cyan": "#56B6C2",
-            "foreground": "#DCDFE4",
-            "green": "#98C379",
-            "name": "One Half Dark",
-            "purple": "#C678DD",
-            "red": "#E06C75",
-            "white": "#DCDFE4",
-            "yellow": "#E5C07B"
-        },
-        {
-            "background": "#FAFAFA",
-            "black": "#383A42",
-            "blue": "#0184BC",
-            "brightBlack": "#4F525D",
-            "brightBlue": "#61AFEF",
-            "brightCyan": "#56B5C1",
-            "brightGreen": "#98C379",
-            "brightPurple": "#C577DD",
-            "brightRed": "#DF6C75",
-            "brightWhite": "#FFFFFF",
-            "brightYellow": "#E4C07A",
-            "cyan": "#0997B3",
-            "foreground": "#383A42",
-            "green": "#50A14F",
-            "name": "One Half Light",
-            "purple": "#A626A4",
-            "red": "#E45649",
-            "white": "#FAFAFA",
-            "yellow": "#C18301"
-        },
-        {
-            "background": "#002B36",
-            "black": "#073642",
-            "blue": "#268BD2",
-            "brightBlack": "#002B36",
-            "brightBlue": "#839496",
-            "brightCyan": "#93A1A1",
-            "brightGreen": "#586E75",
-            "brightPurple": "#6C71C4",
-            "brightRed": "#CB4B16",
-            "brightWhite": "#FDF6E3",
-            "brightYellow": "#657B83",
-            "cyan": "#2AA198",
-            "foreground": "#839496",
-            "green": "#859900",
-            "name": "Solarized Dark",
-            "purple": "#D33682",
-            "red": "#DC322F",
-            "white": "#EEE8D5",
-            "yellow": "#B58900"
-        },
-        {
+            "name": "Solarized Light",
             "background": "#FDF6E3",
             "black": "#073642",
             "blue": "#268BD2",
@@ -292,56 +222,13 @@
             "cyan": "#2AA198",
             "foreground": "#657B83",
             "green": "#859900",
-            "name": "Solarized Light",
             "purple": "#D33682",
             "red": "#DC322F",
             "white": "#EEE8D5",
             "yellow": "#B58900"
         },
         {
-            "background": "#282A36",
-            "black": "#21222C",
-            "blue": "#BD93F9",
-            "brightBlack": "#6272A4",
-            "brightBlue": "#D6ACFF",
-            "brightCyan": "#A4FFFF",
-            "brightGreen": "#69FF94",
-            "brightPurple": "#FF92DF",
-            "brightRed": "#FF6E6E",
-            "brightWhite": "#FFFFFF",
-            "brightYellow": "#FFFFA5",
-            "cyan": "#8BE9FD",
-            "foreground": "#F8F8F2",
-            "green": "#50FA7B",
-            "name": "Dracula",
-            "purple": "#FF79C6",
-            "red": "#FF5555",
-            "white": "#F8F8F2",
-            "yellow": "#F1FA8C"
-        },
-        {
-			"name" : "Gruvbox-Material Medium Dark",
-            "background" : "#282828",
-            "black" : "#665C54",
-            "blue" : "#7DAEA3",
-            "brightBlack" : "#928374",
-            "brightBlue" : "#7DAEA3",
-            "brightCyan" : "#89B482",
-            "brightGreen" : "#A9B665",
-            "brightPurple" : "#D3869B",
-            "brightRed" : "#EA6962",
-            "brightWhite" : "#D4BE98",
-            "brightYellow" : "#D8A657",
-            "cyan" : "#89B482",
-            "foreground" : "#D4BE98",
-            "green" : "#A9B665",
-            "purple" : "#D3869B",
-            "red" : "#EA6962",
-            "white" : "#D4BE98",
-            "yellow" : "#D8A657"
-        },
-        {
-			"name" : "Gruvbox-Material Hard Dark",
+            "name" : "Gruvbox-Material Hard Dark",
             "background" : "#1d2021",
             "black" : "#665C54",
             "blue" : "#7DAEA3",
@@ -360,27 +247,6 @@
             "red" : "#EA6962",
             "white" : "#D4BE98",
             "yellow" : "#D8A657"
-        },
-        {
-			"name" : "Gruvbox-Material Hard Light",
-            "background" : "#F9F5D7",
-            "black" : "#504945",
-            "blue" : "#45707A",
-            "brightBlack" : "#504945",
-            "brightBlue" : "#45707A",
-            "brightCyan" : "#4C7A5D",
-            "brightGreen" : "#6C782E",
-            "brightPurple" : "#945E80",
-            "brightRed" : "#C14A4A",
-            "brightWhite" : "#D4BE98",
-            "brightYellow" : "#B47109",
-            "cyan" : "#4C7A5D",
-            "foreground" : "#654735",
-            "green" : "#6C782E",
-            "purple" : "#945E80",
-            "red" : "#C14A4A",
-            "white" : "#D4BE98",
-            "yellow" : "#B47109"
         },
         {
             "name" : "Gruvbox-Material Medium Light",
@@ -404,6 +270,7 @@
             "yellow" : "#B47109"
         },
         {
+            "name": "Cobalt2",
             "background": "#193549",
             "black": "#000000",
             "blue": "#1478DB",
@@ -418,11 +285,52 @@
             "cyan": "#00c5c7",
             "foreground": "#c7c7c7",
             "green": "#3AD900",
-            "name": "Cobalt2",
             "purple": "#ff2c70",
             "red": "#ff2600",
             "white": "#c7c7c7",
             "yellow": "#ffc600"
-        }
+        },
+        {
+            "name": "ayu",
+            "black": "#000000",
+            "red": "#ff3333",
+            "green": "#b8cc52",
+            "yellow": "#e7c547",
+            "blue": "#36a3d9",
+            "purple": "#f07178",
+            "cyan": "#95e6cb",
+            "white": "#ffffff",
+            "brightBlack": "#323232",
+            "brightRed": "#ff6565",
+            "brightGreen": "#eafe84",
+            "brightYellow": "#fff779",
+            "brightBlue": "#68d5ff",
+            "brightPurple": "#ffa3aa",
+            "brightCyan": "#c7fffd",
+            "brightWhite": "#ffffff",
+            "background": "#0f1419",
+            "foreground": "#e6e1cf"
+        },
+        {
+            "name": "deep",
+            "black": "#000000",
+            "red": "#d70005",
+            "green": "#1cd915",
+            "yellow": "#d9bd26",
+            "blue": "#5665ff",
+            "purple": "#b052da",
+            "cyan": "#50d2da",
+            "white": "#e0e0e0",
+            "brightBlack": "#535353",
+            "brightRed": "#fb0007",
+            "brightGreen": "#22ff18",
+            "brightYellow": "#fedc2b",
+            "brightBlue": "#9fa9ff",
+            "brightPurple": "#e09aff",
+            "brightCyan": "#8df9ff",
+            "brightWhite": "#ffffff",
+            "background": "#090909",
+            "foreground": "#cdcdcd"
+          }
     ]
 }
