--- a/settings.json
+++ b/settings.json
@@ -28,6 +28,8 @@
         { "command": { "action": "splitPane", "split": "vertical",  "splitMode": "duplicate" }, "keys": ["ctrl+shift+h"] },
         {"command": "closePane", "keys": [ "ctrl+shift+w"]},
         {"command": "find", "keys": [ "ctrl+f"]},
+        {"command": {"action": "findMatch", "direction": "next"}, "keys": ["f3"]},
+        {"command": {"action": "findMatch", "direction": "prev"}, "keys": ["ctrl+f3"]},
         {"command": "copy", "keys": [ "ctrl+shift+c"]},
         {"command": "duplicateTab", "keys": [ "ctrl+shift+d"]},
         {"command": "newTab", "keys": [ "ctrl+shift+t"]},
@@ -40,7 +42,8 @@
         {"command": "scrollDownPage", "keys": [ "ctrl+shift+pgdn"]},
         {"command": "scrollUp", "keys": [ "ctrl+shift+up"]},
         {"command": "scrollUpPage", "keys": [ "ctrl+shift+pgup"]},
-        {"command": "openNewTabDropdown", "keys": [ "ctrl+shift+f1"]}
+        {"command": "openNewTabDropdown", "keys": [ "ctrl+shift+f1"]},
+        {"command": "paste", "keys": ["ctrl+v"]}
     ],
     "requestedTheme": "system",
     "showTabsInTitlebar": true,
@@ -49,15 +52,15 @@
     "profiles": [
         {
             "guid": "{ad36f2f5-c57e-45e3-8b17-24fac8b9245f}",
-            "acrylicOpacity": 1,
+            "acrylicOpacity": 0.85,
             "closeOnExit": true,
             // "colorScheme": "Solarized Light",
             "colorScheme": "ayu",
             "commandline": "\"%PROGRAMFILES%/git/usr/bin/bash.exe\" -i -l",
             "cursorColor": "#FFFFFF",
             "cursorShape": "bar",
-            "fontFace": "Cascadia Code",
-            "fontWeight": "bold",
+            "fontFace": "Cascadia Mono",
+            // "fontWeight": "bold",
             "fontSize": 12,
             "historySize": 9001,
             "icon" : "%PROGRAMFILES%/Git/mingw64/share/git/git-for-windows.ico",
@@ -144,7 +147,8 @@
             "acrylicOpacity": 0.75,
             "closeOnExit": true,
             "colorScheme": "deep",
-            "commandline": "cmd.exe /k \"C:/Program Files (x86)/Microsoft Visual Studio/2019/Community/Common7/Tools/VsDevCmd.bat\"",
+            // "commandline": "cmd.exe /k \"C:/Program Files (x86)/Microsoft Visual Studio/2019/Community/Common7/Tools/VsDevCmd.bat\"",
+            "commandline": "cmd.exe /k \"C:/Program Files (x86)/Microsoft Visual Studio/2019/Community/VC/Auxiliary/Build/vcvars64.bat\"",
             "icon": "ms-appx:///ProfileIcons/{0caa0dad-35be-5f56-a8ff-afceeeaa6101}.png",
             "name": "Developer CMD for VS 2019",
             "cursorColor": "#FFFFFF",
